fix: sidebar menu item word wrap

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,15 +1,11 @@
 @import "../../shared/styles/app/variables";
 
+$menu-item-border-width: 3px;
+
 nav {
   background-color: $brand-primary-light;
   border-right: 1px solid #ddd;
   width: $layout-sidebar-width;
-  transition: width 0.1s ease;
-
-  &.collapsed {
-    font-size: 20px;
-    width: $layout-sidebar-width-collapsed;
-  }
 
   ul {
     list-style-type: none;
@@ -17,7 +13,7 @@ nav {
     padding: 10px 0 0;
 
     li {
-      border-left: 3px solid transparent;
+      border-left: $menu-item-border-width solid transparent;
       color: $brand-white;
       cursor: pointer;
       padding: 10px 18px;
@@ -30,7 +26,21 @@ nav {
       }
 
       i {
-        padding-right: 8px;
+        line-height: 20px;
+        padding-right: 16px;
+      }
+    }
+  }
+
+  &.collapsed {
+    font-size: 20px;
+    width: auto;
+
+    ul li {
+      padding: 16px 18px;
+
+      i {
+        padding-right: $menu-item-border-width;
       }
     }
   }
