--- a/src/app/shared/styles/app/variables.scss
+++ b/src/app/shared/styles/app/variables.scss
@@ -3,10 +3,9 @@
 // --------------------------------------------------
 
 // Layout
-$layout-top-menu-height:          49px;
-$layout-top-menu-font-size:       15px;
-$layout-sidebar-width:            220px;
-$layout-sidebar-width-collapsed:  64px;
+$layout-top-menu-height:     49px;
+$layout-top-menu-font-size:  15px;
+$layout-sidebar-width:      220px;
 
 //== Colors
 //
